adding points
